added listsubscription route and regen swag
